--- a/index.html
+++ b/index.html
@@ -1,5 +1,71 @@
 !DOCTYPE html>
 <!-- Website template by freewebsitetemplates.com -->
+<svg style="display:none">
+	<symbol id="down" viewBox="0 0 16 16">
+		<polygon points="3.81 4.38 8 8.57 12.19 4.38 13.71 5.91 8 11.62 2.29 5.91 3.81 4.38" />
+  	</symbol>
+  	<symbol id="users" viewBox="0 0 16 16">
+    		<path d="M8,0a8,8,0,1,0,8,8A8,8,0,0,0,8,0ZM8,15a7,7,0,0,1-5.19-2.32,2.71,2.71,0,0,1,1.7-1,13.11,13.11,0,0,0,1.29-.28,2.32,2.32,0,0,0,.94-.34,1.17,1.17,0,0,0-.27-.7h0A3.61,3.61,0,0,1,5.15,7.49,3.18,3.18,0,0,1,8,4.07a3.18,3.18,0,0,1,2.86,3.42,3.6,3.6,0,0,1-1.32,2.88h0a1.13,1.13,0,0,0-.27.69,2.68,2.68,0,0,0,.93.31,10.81,10.81,0,0,0,1.28.23,2.63,2.63,0,0,1,1.78,1A7,7,0,0,1,8,15Z" /> 
+  	</symbol>
+   
+  <!-- more symbols here -->
+</svg>
+</svg>
+<header class="page-header">
+  <nav>
+    <a href="#0">
+      <img class="logo" src="logo.svg" alt="forecastr logo">
+    </a>
+    <button class="toggle-mob-menu" aria-expanded="false" aria-label="open menu">
+      <svg width="20" height="20" aria-hidden="true">
+        <use xlink:href="#down"></use>
+      </svg>
+    </button>
+    <ul class="admin-menu">
+      <li class="menu-heading">
+        <h3>Admin</h3>
+      </li>
+      <li>
+        <a href="#0">
+          <svg>
+            <use xlink:href="#pages"></use>
+          </svg>
+          <span>Pages</span>
+        </a>
+      </li>
+       
+      <!-- more list items here -->
+       
+      <li>
+        <button class="collapse-btn" aria-expanded="true" aria-label="collapse menu">
+          <svg aria-hidden="true">
+            <use xlink:href="#collapse"></use>
+          </svg>
+          <span>Collapse</span>
+        </button>
+      </li>
+    </ul>
+  </nav>
+</header>
+<section class="search-and-user">
+  <form>
+    <input type="search" placeholder="Search Pages...">
+    <button type="submit" aria-label="submit form">
+      <svg aria-hidden="true">
+        <use xlink:href="#search"></use>
+      </svg>
+    </button>
+  </form>
+  <div class="admin-profile">
+    <span class="greeting">...</span>
+    <div class="notifications">
+      <span class="badge">...</span>
+      <svg>
+        <use xlink:href="#users"></use>
+      </svg>
+    </div>
+  </div>
+</section>
 <html>
 <head>
 	<meta charset="UTF-8">
