--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <!-- Website template by freewebsitetemplates.com -->
 <svg style="display:none">
 	<symbol id="down" viewBox="0 0 16 16">
